--- a/my-first-mavenapp/pom.xml
+++ b/my-first-mavenapp/pom.xml
@@ -16,6 +16,23 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+
+<!--    <dependency>-->
+<!--      <groupId>org.springframework</groupId>-->
+<!--      <artifactId>spring-core</artifactId>-->
+<!--      <version>5.3.9</version>-->
+<!--      <scope>compile </scope>-->
+<!--    </dependency>-->
+
+<!--    &lt;!&ndash; https://mvnrepository.com/artifact/com.mpatric/mp3agic &ndash;&gt;-->
+<!--    <dependency>-->
+<!--      <groupId>com.mpatric</groupId>-->
+<!--      <artifactId>mp3agic</artifactId>-->
+<!--      <version>0.9.1</version>-->
+<!--    </dependency>-->
+
+
   </dependencies>
 
   <build>
@@ -32,6 +49,27 @@
           </archive>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.2.4</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+
     </plugins>
+
+
   </build>
+
+
+
+
 </project>
