--- a/spring-boot-mvc/src/main/resources/application.properties
+++ b/spring-boot-mvc/src/main/resources/application.properties
@@ -10,3 +10,18 @@ spring.jpa.show-sql=true
 
 # Enable H2 Console (Access at: http://localhost:8080/h2-console)
 spring.h2.console.enabled=true
+
+
+
+## MySQL Database Configuration
+#spring.datasource.url=jdbc:mysql://<YOUR_HOST>:3306/<YOUR_DATABASE>?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=<YOUR_USERNAME>
+#spring.datasource.password=<YOUR_PASSWORD>
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+## Hibernate Properties
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update  # Use 'update' for automatic schema changes
+#
+## Show SQL in logs (optional)
+#spring.jpa.show-sql=true
